[package]
name = "rwgl"
version = "0.1.0"
authors = ["Andrei Monkin"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
num_enum = "0.4.3"

[dependencies.web-sys]
version = "0.3.37"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlCanvasElement",
  "Node",
  "Window",
  "WebGlRenderingContext",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "AngleInstancedArrays",
]
